samples/_failures_safe/1761311756_97f2ab_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2f4b9d51.c: In function ‘main’:
./samples/SAFE/__tmp_2f4b9d51.c:167:40: error: missing terminating " character
  167 |             case EVENT_INVALID: printf("IN
      |                                        ^~~
./samples/SAFE/__tmp_2f4b9d51.c:167:13: error: expected expression at end of input
  167 |             case EVENT_INVALID: printf("IN
      |             ^~~~
./samples/SAFE/__tmp_2f4b9d51.c:167:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2f4b9d51.c:167:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2f4b9d51.c:167:13: error: expected declaration or statement at end of input
